--- a/Java-Web/WebContent/style/css/Home.css
+++ b/Java-Web/WebContent/style/css/Home.css
@@ -19,10 +19,9 @@
 
 	
 	
-	
 
 .color1{
-	background-color: 	#b9b9b9;
+	background-color:black;
 	margin-top:px;
 	height:70px;
 	font-family: 'Roboto', sans-serif;
@@ -30,7 +29,7 @@
 	padding-top: 20px;
 	 font-weight:bold;
 	 font-size:30px;
-    
+    color:white;
 }   
 
 .color2{
@@ -45,10 +44,11 @@
 	margin-top:75px;
 	border:1px #b9b9b9 solid;
 	height:70px;
-	background-color: 	#b9b9b9;
+	background-color:black;
 	font-family: 'Roboto', sans-serif;
 	margin: auto;
 	padding-top: 20px;
+	color:white;
 }
 
 .carousel-inner img {
