--- a/Java-Web/WebContent/style/css/MisReservas.css
+++ b/Java-Web/WebContent/style/css/MisReservas.css
@@ -21,10 +21,23 @@
 }
 
 
+
+
+
+
+
 .cont{
 	
 	margin-top:4px;
 	font-family: Brush Script MT;
 	font-size:32px;
+	color:;
+}
+
+.cont1{
+	
+	margin-top:4px;
+	font-family: Brush Script MT;
+	font-size:50px;
 	color:;
 }
