Reservar desde el administrador funcionando.

--- a/Java-Web/WebContent/style/css/MisReservas.css
+++ b/Java-Web/WebContent/style/css/MisReservas.css
@@ -50,7 +50,10 @@
 .cont1{
 	
 	margin-top:4px;
-	font-family: Brush Script MT;
-	font-size:50px;
+	font-family: 'Roboto', sans-serif;
+	font-size:60px;
 	color:;
 }
+
+
+
